--- a/src/Infrastructure/Riganti.Utils.Infrastructure.Empty/Riganti.Utils.Infrastructure.Empty.csproj
+++ b/src/Infrastructure/Riganti.Utils.Infrastructure.Empty/Riganti.Utils.Infrastructure.Empty.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <VersionPrefix>0.0.0</VersionPrefix>
+    <VersionPrefix>0.0.4</VersionPrefix>
     <TargetFrameworks>netstandard1.6</TargetFrameworks>
     <AssemblyName>Riganti.Utils.Infrastructure.Empty</AssemblyName>
     <PackageId>Riganti.Utils.Infrastructure.Empty</PackageId>
